# rs_events

./: AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  PROJECT.md  README.md
src/: constants.rs  error.rs  imports.rs  lib.rs
src/aliases/: local.rs  mod.rs  shared.rs
src/constants/: local.rs  mod.rs  shared.rs
src/emitter/: mod.rs
src/imports/: _std.rs  mod.rs  no_std.rs
src/listener/: async_ext.rs  listener_api.rs  listener_error.rs  mod.rs
src/listener/listener_mode/: local.rs  mod.rs  shared.rs
src/listener/listener_storage/: local.rs  mod.rs  shared.rs
src/modes/: local.rs  mod.rs  shared.rs
src/old/base/: event_emitter.rs  event_handler.rs  listener.rs  mod.rs
src/old/threaded/: event_handler.rs  listener.rs
src/tests/local/: mod.rs
src/tests/local/mode/: callback.rs  mod.rs
src/tests/old/: event_emitter.rs  listener.rs  mod.rs  payloads.rs
src/tests/shared/: mod.rs
src/tests/shared/mode/: callback.rs  mod.rs
