[package]
name = "rs_events"
version = "0.1.0"
edition = "2021"
authors = ["Jesse Greenough <jesse.greenough84@gmail.com>"]
description = "A flexible and ergonomic event emission crate for Rust. Supports both std/threaded and no_std/alloc environments, with tagging, listener lifetimes, async/sync emission, and robust error handling."
license = "MIT OR Apache-2.0"
repository = "https://github.com/GreenJ84/rs_events"
homepage = "https://github.com/GreenJ84/rs_events"
documentation = "https://docs.rs/rs_events"
keywords = ["events", "event_emitter", "listener", "async", "no_std"]
categories = ["asynchronous", "concurrency", "no-std"]
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
no_std = []

# Async std runtime
async-tokio = [
  "futures-util",
  "tokio",
  "tokio/rt",
  "tokio/macros",
  "tokio/sync",
]

# Async no_std runtime
async-embassy = [
  "futures-util",
  "embassy-executor",
  "embassy-time",
]


# multi-threaded support (enables rt-multi-thread if tokio is enabled)
multi-thread = [
  "dashmap",
  "tokio?/rt-multi-thread",
]

threaded = ["multi-thread"] # deprecated legacy alias

[dependencies]
futures-util = { version = "0.3.31", optional = true, default-features = false }

tokio = { version = "1.49.0", optional = true, default-features = false }

embassy-executor = { version = "0.9.1", optional = true }
embassy-time = { version = "0.5.0", optional = true }

dashmap = { version = "6.1.0", optional = true }

[dev-dependencies]
tokio-test = "0.4.5"
